--- a/assets/sass/theme/_theme-layout.scss
+++ b/assets/sass/theme/_theme-layout.scss
@@ -13,7 +13,7 @@
 		@include container--centered;
 	}
 
-	.doc-row {
+	.row {
 		@include row;
 	}
 
